--- a/src/components/style.css
+++ b/src/components/style.css
@@ -90,3 +90,21 @@ h1{
     margin-left: 25vw;
     margin-top: 25vh;
 }
+
+ul {
+  list-style: none;
+  text-decoration: none;
+  display: flex;
+  line-height: 25px;
+  justify-content: center;
+  font-size: large;
+  position: fixed;
+  text-align: center;
+  width: 100vw;
+  z-index: 8;
+}
+
+li {
+  padding-left: 15px;
+  margin-top: 5px;
+}
